# Ventra

./: .cursorignore  .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  ventra.py
.github/: PULL_REQUEST_TEMPLATE.md  release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  collector_request.md
.github/workflows/: build.yml  ci.yml  publish.yml
.obsidian/: workspace.json
artifacts/packs/: baseline-ir-aws.yaml  baseline-ir-azure.yaml  baseline-ir-gcp.yaml
collector/: README.md  __init__.py  __main__.py  _packaging_hooks.py  cli.py  devgui.py  pyproject.toml  runner.py
collector/aws/: __init__.py  client_factory.py  registry.py
collector/azure/: __init__.py  client_factory.py  registry.py
collector/bootstrap/: aws_cloudshell.sh  verify_signature.sh
collector/clouds/: __init__.py
collector/cloudtrail/: cloudtrail_history.py  cloudtrail_s3.py
collector/engine/: __init__.py  acquisition.py  executor.py  loader.py  registry.py  run_common.py  validate.py
collector/gcp/: __init__.py  registry.py
collector/harbor_collector/: __init__.py  cli.py
collector/kit/: __init__.py  build.py  preview.py
collector/lib/: __init__.py  auth.py  base.py  ingest.py  limits.py  models.py  params.py  scoping.py  uv_util.py
collector/tools/: __init__.py  verify_readonly.py
console/: README.md
console/backend/: README.md  pyproject.toml
console/backend/.ventra-ingest-watch/: ingested-keys.json
console/backend/app/: __init__.py  config.py  evidence.py  main.py  store.py
console/backend/app/rbac/: __init__.py
console/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
deploy/compose/: harbor.yml
deploy/docker/: backend.Dockerfile  frontend.Dockerfile
deploy/terraform/: README.md  main.tf
docs/: architecture.md  artifacts.md  engine-upgrade.md  evidence-package-format.md  gcp-authentication.md  threat-coverage.md
docs/acquire/: non-goals.md
docs/iam-policies/: README.md  aws-collector-permissions.txt  aws-collector-readonly.json  azure-collector-graph.json  azure-collector-m365.json  azure-collector-readonly.json  gcp-collector-permissions.txt  gcp-collector-readonly.json
docs/keys/: README.md
docs/runbooks/: analyst.md  data-custodian.md  operator.md
infrastructure/: .gitignore  COLLECTORS.md  README.md
infrastructure/aws/: .terraform.lock.hcl  README.md  cloudtrail.tf  logging.tf  main.tf  network_services.tf  outputs.tf  providers.tf  security_services.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf  workloads.tf
infrastructure/azure/: .terraform.lock.hcl  README.md  app_gateway.tf  keyvault_aks.tf  logging.tf  main.tf  monitoring.tf  network.tf  outputs.tf  providers.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/gcp/: .gitignore  .terraform.lock.hcl  README.md  api_gateway.tf  apigateway.tf  audit.tf  bigquery.tf  bootstrap-apis.sh  cloudsql.tf  compute.tf  dns.tf  finish-apply.sh  fix-auth.sh  functions.tf  gke.tf  loadbalancer.tf  logging.tf  main.tf  monitoring.tf  network.tf  outputs.tf  scc.tf  secrets.tf  storage.tf  storage_workloads.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/scripts/: README.md  common.sh  generate-all.sh
ingester/: README.md  pyproject.toml
ingester/harbor_ingester/: __init__.py  cli.py  package.py  pipeline.py
ingester/harbor_ingester/enrichment/: __init__.py  enrich.py
ingester/harbor_ingester/loaders/: __init__.py  casestore.py
ingester/harbor_ingester/normalizer/: __init__.py  base.py  inventory.py
ingester/harbor_ingester/normalizer/sources/: __init__.py  cloudtrail.py  findings.py  network.py
ingester/harbor_ingester/verify/: __init__.py  integrity.py
ingester/pipelines/: README.md
ingester/pipelines/elastic/: README.md  demo.sh  docker-compose.yml  ventra-events-template.json
ingester/pipelines/logstash/: cloudtrail.conf  ventra-common.conf  ventra-unified.conf
ingester/pipelines/ocsf/: README.md
ingester/ventra_ingester/: cli.py  evidence_extract.py  ingest_watch.py  limits.py  package.py  pipeline.py
ingester/ventra_ingester/exporters/: __init__.py  elastic_ndjson.py
ingester/ventra_ingester/loaders/: casestore.py
ingester/ventra_ingester/normalizer/: inventory.py
ingester/ventra_ingester/normalizer/sources/: __init__.py  access_logs.py  azure_activity_log.py  azure_diagnostics.py  azure_entra.py  azure_nsg_flow.py  cloudtrail.py  dns_logs.py  eks_audit.py  findings.py  gcp_audit.py  gcp_findings.py  log_analytics.py  m365.py  network.py  waf.py
ingester/ventra_ingester/verify/: integrity.py
obsidian/: EC2 & EBS Logs.md  Harbor Collectors.md  Network And Edge Logs.md  Presentation.md  Questions the tool should ask before collecting.md  Testing Roadmap.md  Third-Party Identity Provider Logs.md  To Do.md  Tool Testers.md  Workflow Env.md
obsidian/.obsidian/: workspace.json
obsidian/Collectors/: AWS Collectors.md
old-gui/: app.css  app.js  index.html  package.py  server.py  state.py  upload.py
schemas/: artifact.schema.json  manifest.schema.json  package.schema.json  unified-event.schema.json
scripts/: catalog-label-overrides.json  catalog-planned.json  clean-pycache.sh  dev-local.sh  ensure-no-pycache.sh  extract-artifact-icons.py  generate-catalog-ts.py  install-git-hooks.sh
scripts/live-test/: README.md  run-test.sh  teardown.sh
testing/: README.md  generate-data.sh
testing/terraform/: .gitignore  .terraform.lock.hcl  buckets.tf  data.tf  detect.tf  example.tfvars  network.tf  outputs.tf  pii_sample.csv  tier1.tf  tier2.tf  tier3.tf  variables.tf  versions.tf
tests/collector/: test_acquisition.py  test_artifacts_validate.py  test_azure_flow.py  test_azure_log_analytics.py  test_azure_m365.py  test_azure_registry.py  test_azure_tier_a.py  test_azure_tier_b.py  test_cli.py  test_cli_collectors.py  test_iam.py  (+17 more)
ventra/: cli.py
ventra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+707 files in other folders)
