[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ventra"
dynamic = ["version"]
description = "Cloud forensic triage — read-only collector, ingester, and analyst console."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ventra contributors" }]
keywords = ["dfir", "incident-response", "aws", "forensics", "cloud"]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "rich>=13.7",
    "zstandard>=0.22",
]

[project.optional-dependencies]
console = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "moto>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.scripts]
ventra = "collector.cli:main"
ventra-collect = "collector.cli:main_legacy"

[tool.setuptools.packages.find]
where = ["."]
include = ["collector*"]
namespaces = true

# Version is derived from git — no version string to hand-edit. A tag `vX.Y.Z` builds exactly
# X.Y.Z; each commit after a tag builds X.Y.Z.postN (post1, post2, …). Both are *normal*
# versions that `pip`/`pipx install` and `pipx upgrade` pick up by default, which is what lets
# every push to main flow straight to PyPI and be fetched with a plain `pipx upgrade ventra`.
#   * version_scheme="post-release"  → 0.1.1.post3 instead of a 0.1.2.dev3 pre-release
#   * local_scheme="no-local-version" → drops the +g<hash> segment PyPI refuses to accept
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["collector", "ingester", "console/backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
