[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ventra"
dynamic = ["version"]
description = "Cloud forensic triage — read-only collector, ingester, and analyst console."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ventra contributors" }]
keywords = ["dfir", "incident-response", "aws", "forensics", "cloud"]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "rich>=13.7",
    "zstandard>=0.22",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.16",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-monitor>=6.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-security>=7.0",
    "azure-mgmt-authorization>=4.0",
    "azure-storage-blob>=12.19",
]
console = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "moto>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "azure-identity>=1.16",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-monitor>=6.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-security>=7.0",
    "azure-mgmt-authorization>=4.0",
    "azure-storage-blob>=12.19",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.scripts]
ventra = "collector.cli:main"
ventra-collect = "collector.cli:main_legacy"

[tool.setuptools.packages.find]
where = ["."]
include = ["collector*"]
namespaces = true

# Version is derived from git tags — no version string to hand-edit. A tag `vX.Y.Z` builds
# exactly X.Y.Z (these are what get published to PyPI). A working tree or a git install between
# tags builds a dev version like `X.Y.(Z+1).devN+g<hash>` — the +g<hash> tells you the exact
# commit you're testing, which also lands in the evidence package's tool_version.
# `fallback_version` is only used when building from a source tree with no git metadata.
[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["collector", "ingester", "console/backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
