[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ventra"
dynamic = ["version"]
description = "Cloud forensic triage — read-only collector, ingester, and analyst console."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ventra contributors" }]
keywords = ["dfir", "incident-response", "aws", "forensics", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "requests>=2.31",
    "rich>=13.7",
    "zstandard>=0.22",
    "PyYAML>=6.0",
    # GCP collectors
    "google-cloud-logging>=3.10",
    "google-cloud-resource-manager>=1.12",
    "google-cloud-iam>=2.15",
    "google-cloud-securitycenter>=1.28",
    "google-cloud-compute>=1.19",
    "google-cloud-container>=2.45",
    "google-auth>=2.29",
    "google-api-core>=2.19",
    "protobuf>=4.25",
    # Azure collectors
    "azure-identity>=1.16",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-resource-subscriptions>=1.0.0b2",
    "azure-mgmt-monitor>=6.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-security>=7.0",
    "azure-mgmt-authorization>=4.0",
    "azure-storage-blob>=12.19",
]

[project.optional-dependencies]
# Backward compatible — cloud SDKs ship in the base install.
gcp = []
azure = []
console = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.scripts]
ventra = "collector.cli:main"
ventra-collect = "collector.cli:main_legacy"

[project.urls]
Homepage = "https://github.com/Haggag-22/Ventra"
Documentation = "https://github.com/Haggag-22/Ventra#readme"
Repository = "https://github.com/Haggag-22/Ventra"
Issues = "https://github.com/Haggag-22/Ventra/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "ventra-ingester",
    "ventra-console-backend",
]

[tool.uv]
required-version = ">=0.4"
default-groups = ["dev"]

[tool.uv.workspace]
members = ["ingester", "console/backend"]

[tool.uv.sources]
ventra-ingester = { workspace = true }
ventra-console-backend = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["collector*"]
namespaces = true

[tool.setuptools.cmdclass]
build_py = "collector._packaging_hooks.BuildPyWithArtifacts"

[tool.setuptools.package-data]
collector = ["_artifacts/**/*.yaml", "_artifacts/**/*.yml"]

# Version is derived from git tags — no version string to hand-edit. A tag `vX.Y.Z` builds
# exactly X.Y.Z (these are what get published to PyPI). A working tree or a git install between
# tags builds a dev version like `X.Y.(Z+1).devN+g<hash>` — the +g<hash> tells you the exact
# commit you're testing, which also lands in the evidence package's tool_version.
# `fallback_version` is only used when building from a source tree with no git metadata.
[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["collector", "ingester", "console/backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
