[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harbor-console-backend"
version = "0.1.0"
description = "Harbor analyst console backend — a thin query layer over the case store."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "harbor-ingester",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
harbor-console = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"
