[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ventra-console-backend"
version = "0.1.0"
description = "Ventra analyst console backend — a thin query layer over the case store."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ventra contributors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "ventra-ingester",
    "ventra",
]

[project.scripts]
ventra-console = "app.main:run"

[tool.uv.sources]
ventra = { workspace = true }
ventra-ingester = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"
